Bug squashing in relation to context

--- a/elements/pfe-modal/src/pfe-modal.scss
+++ b/elements/pfe-modal/src/pfe-modal.scss
@@ -62,6 +62,7 @@ $LOCAL-VARIABLES: (
 	}
 	&__window {
 		--context: #{pfe-local(context)};
+		@include pfe-set-broadcast-context(#{pfe-fetch(context)});
 
 		position: relative;
 		max-width: pfe-local(MaxWidth--mobile);
